Top Table list spacing fix

--- a/blocks/top-table-list-block/features/top-table-list/default.scss
+++ b/blocks/top-table-list-block/features/top-table-list/default.scss
@@ -133,4 +133,9 @@
   .hr-borderless {
     visibility: hidden;
   }
+
+  .container-fluid{
+    margin-bottom: 1.5rem;
+    margin-top: 1.5rem;
+  }
 }
